Archive2/29/eedb8bb8314e7b/output
main.cpp: In function 'int main()':
main.cpp:11:13: error: 'binary' was not declared in this scope
     cout << binary << c << endl;
             ^
main.cpp:12:33: warning: left shift count is negative [enabled by default]
     cout << binary << (c << (7-8)) << endl;
                                 ^
